--- a/BFCNews/BFCNews.csproj
+++ b/BFCNews/BFCNews.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>aspnet-BFCNews-00301f29-1931-471c-8d41-1c2b9a0a9f45</UserSecretsId>
   </PropertyGroup>
